force-app/main/default/objects/JobMaterial__c/JobMaterial__c.object-meta.xml
<CustomObject>
    <description>Job Material is a helper object that stores tracking information and other Job specific information about Material needed to perform a Job.</description>
    <label>Job Material</label>
    <nameField>
        <displayFormat>JM-{000000000}</displayFormat>
        <label>Job Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>