force-app/main/default/objects/JobMaterial__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <formula>Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JobName</label>
    <type>Text</type>
</CustomField>