force-app/main/default/objects/JobMaterial__c/fields/KitMaterial__c.field-meta.xml
<CustomField>
    <fullName>KitMaterial__c</fullName>
    <formula>Material__r.Kit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit Material</label>
    <type>Checkbox</type>
</CustomField>