force-app/main/default/objects/JobMaterial__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Job Materials</relationshipLabel>
    <relationshipName>Job_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>