force-app/main/default/objects/JobMaterial__c/fields/MaterialExternalId__c.field-meta.xml
<CustomField>
    <fullName>MaterialExternalId__c</fullName>
    <formula>Material__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material External Id</label>
    <type>Text</type>
</CustomField>