force-app/main/default/objects/JobMaterial__c/fields/MaterialQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaterialQuantity__c</fullName>
    <formula>ProjectServiceMaterial__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>