force-app/main/default/objects/JobMaterial__c/fields/ProjectServiceMaterial__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceMaterial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Service Material</label>
    <referenceTo>ProjectServiceMaterial__c</referenceTo>
    <relationshipLabel>Job Materials</relationshipLabel>
    <relationshipName>Job_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>