force-app/main/default/objects/JobMaterial__c/fields/ShippedToAddress2__c.field-meta.xml
<CustomField>
    <fullName>ShippedToAddress2__c</fullName>
    <label>ShippedTo Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>