force-app/main/default/objects/JobMaterial__c/fields/ShippedToAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippedToAddress__c</fullName>
    <label>ShippedTo Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>