force-app/main/default/objects/JobMaterial__c/fields/ShippedToCity__c.field-meta.xml
<CustomField>
    <fullName>ShippedToCity__c</fullName>
    <label>ShippedTo City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>