force-app/main/default/objects/JobMaterial__c/fields/ShippedToContactId__c.field-meta.xml
<CustomField>
    <fullName>ShippedToContactId__c</fullName>
    <label>ShippedTo Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>