force-app/main/default/objects/JobMaterial__c/fields/ShippedToCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippedToCountry__c</fullName>
    <label>ShippedTo Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>