force-app/main/default/objects/JobMaterial__c/fields/ShippedToEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ShippedToEmployeeId__c</fullName>
    <label>ShippedTo Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>