force-app/main/default/objects/JobMaterial__c/fields/ShippedToFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShippedToFirstName__c</fullName>
    <label>ShippedTo First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>