force-app/main/default/objects/JobMaterial__c/fields/ShippedToLastName__c.field-meta.xml
<CustomField>
    <fullName>ShippedToLastName__c</fullName>
    <label>ShippedTo Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>