force-app/main/default/objects/JobMaterial__c/fields/ShippedToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippedToPostalCode__c</fullName>
    <label>ShippedTo PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>