force-app/main/default/objects/JobMaterial__c/fields/ShippedToState__c.field-meta.xml
<CustomField>
    <fullName>ShippedToState__c</fullName>
    <label>ShippedTo State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>